--- a/css/styles.css
+++ b/css/styles.css
@@ -16,4 +16,24 @@
   margin-top: 50px;
   margin-left: 30px;
   min-height: 1200px;
-  height: auto;}
+  height: auto;
+}
+
+body,html{height:100%;margin:0;padding:0;background:#E3DFD2}
+svg{
+  background:url('https://epicodus-emmerson.s3-us-west-2.amazonaws.com/robot.png');
+  background-size:cover;
+  width:40vmin; height:auto;
+  display:block;
+  margin:30vmin auto;
+}
+text{
+  font-size:10px;
+  transition:font-size .4s ease-out;
+  font-weight:900;
+  font-family:arial;
+}
+svg:hover text{
+  transition:font-size .4s ease-in;
+  font-size: 300px;
+}
