--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,15 @@
   min-height: 1200px;
   height: auto;
 }
+
+img {
+  border-radius: 50%;
+}
+
+.containerX {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: 'Roboto Mono', monospace;
+}
